# redglass

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
data/circuit_breakers/: benign_test_no_spec_tokens.csv  benign_train_no_spec_tokens.csv  benign_val_no_spec_tokens.csv  harmful_test_no_spec_tokens.csv  harmful_train_no_spec_tokens.csv  harmful_val_no_spec_tokens.csv
examples/: api.py  example.py  test.ipynb
redglass/: activations.py  config.py  detectors.py  log.py  metrics.py  models.py  repository.py  scores.py  types.py  utils.py
redglass/attacks/: __init__.py  base.py  embedding.py
redglass/data/: __init__.py  adv_bench.py  alpaca.py  base.py  circuit_breakers.py  jailbreakbench.py  maliciousinstruct.py  strongreject.py  tokenized_data.py  xstest.py
redglass/scripts/: train_attack.py  train_detector.py
src/redglass/: __init__.py
src/redglass/attacks/: __init__.py  base.py  embedding.py  flrt.py  gcg.py
src/redglass/data/: __init__.py  base.py  hf_dataset.py
src/redglass/detectors/: __init__.py  base.py  mlp.py
src/redglass/losses/: __init__.py  base.py
src/redglass/models/: __init__.py  base.py  huggingface.py
src/redglass/scripts/: train_detector.py
src/redglass/utils/: __init__.py  utils.py
tests/: test_activations.py  test_data.py  test_detectors.py  test_metrics.py  test_repository.py  test_tokenized_data.py
tests/redglass/attacks/: test_embedding.py
