[project]
name = "redglass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "serteal", email = "serteal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "jaxtyping>=0.2.36",
    "loguru>=0.7.3",
    "nanogcg>=0.3.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "wandb>=0.19.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
